test/Translate/Control/table.p4.ref
error: loc("test/Translate/Control/table.p4":26:4): Unsupported operation 'p4hir.symbol_ref' in common statement context: 
note: loc("test/Translate/Control/table.p4":26:4): see current operation: %1 = "p4hir.symbol_ref"() <{decl = @Pipe::@__local_Pipe_local_hdr_0}> : () -> !p4hir.ref<!p4hir.header<"MyHeader", f1: !p4hir.int<16>, __valid: !p4hir.validity.bit>>
  24 |     int<16> test = 52;
  25 |     table myTable {
  26 |         key = {
     |    ^
  27 |             arg1.f1 - 1 : exact @name("arg1.key");
  28 |             arg3 & 0xAABB : lpm @name("arg3.key");
